# fastapi-tools

./: .gitignore  pyproject.toml
src/: main.py
src/app_creator/: builder.py  main.py  writer.py
src/cli/: main.py  new.py
src/fs/: blueprints.py  builder.py  exceptions.py  main.py  writer.py
tests/e2e/: conftest.py  test_new.py
tests/functional/test_app_creator/: conftest.py  test_writer.py
tests/functional/test_fs/: conftest.py  test_writer.py
tests/unit/test_app_creator/: conftest.py  test_blueprints.py  test_builder.py  test_main.py  test_writer.py
tests/unit/test_fs/: conftest.py  test_blueprints.py  test_builder.py  test_main.py  test_writer.py
