[tool.poetry]
name = "fastapi-tools"
version = "0.1.0"
description = ""
authors = ["ivan <ibodnar.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
